testing/framework/resources/Advanced/Failing/mondrian/query2289.e
Store 23	Mid-Size Grocery	Johnson	\N	\N	\N	\N	f	3920 Noah Court
